# statics-site-generator

./: README.md  pyproject.toml
src/: main.sh  test.sh
src/static_site_generator/: htmlattribute.py  htmlnode.py  htmltag.py  main.py  textnode.py  util.py
src/tests/: test_htmlnode.py  test_leafnode.py  test_parentnode.py  test_textnode.py
