[project]
name = "static-site-generator"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Amanda Thomas", email = "amanda.thomas14@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
start = "python src/static_site_generator/server.py --dir public"
script = "python src/static_site_generator/main.py"
test = "python -m unittest discover -s src/tests"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/static_site_generator"]

[tool.pyright]
pythonPlatform = "Linux"
pythonVersion = "3.12"
venv = ".venv"
venvPath = "."
stubPath = "/home/thegusbus/stubs/python-type-stubs/main/stubs"

